--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,14 @@
         "list": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
-        "forward_list": "cpp"
+        "forward_list": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "memory": "cpp",
+        "scoped_allocator": "cpp",
+        "streambuf": "cpp",
+        "tuple": "cpp"
     }
 }
